@@ -2,6 +2,8 @@
  * avoid unproductive deserializing of cached rows during compaction
    (CASSANDRA-3921)
  * Show Effective Owership via Nodetool ring <keyspace> (CASSANDRA-3412)
+ * fix concurrency issues with CQL keyspace creation (CASSANDRA-3903)
+
 
 1.1-beta1
  * add nodetool rebuild_index (CASSANDRA-3583)
